# Stalker2Settings

./: .gitignore  Cargo.toml  Engine.ini  GameUserSettings.ini  GameUserSettings_2.ini  LICENSE  README.md
dotnet/Stalker2Settings/: Config.cs  Database.cs  Program.cs  Stalker2Settings.csproj  System.cs
dotnet/Stalker2Settings/Models/: Setting.cs  SettingsPreset.cs  SystemInfo.cs
dotnet/Stalker2Settings/Screens/: MainScreen.cs  PresetsScreen.cs  SettingsScreen.cs
rust/: Cargo.toml
rust/src/: config.rs  db.rs  main.rs  models.rs  system.rs
rust/src/migrations/: core_log.rs  core_system.rs  engine.rs  garbage_collection.rs  input_settings.rs  mod.rs  renderer_settings.rs  rendering_thread.rs  shader_compiler.rs  streaming_settings.rs  system_settings.rs  texture_streaming.rs
rust/src/ui/: menu.rs  mod.rs  presets.rs  settings.rs  theme.rs
src/: config.rs  db.rs  main.rs  migrations.rs  system.rs  ui.rs
src/migrations/: error_handling.rs  system_settings.rs
