[package]
name = "Stalker2Settings"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
cursive = "0.20"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
configparser = "3.0"
sysinfo = "0.29"
chrono = "0.4"
